[package]
name = "lockdowns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
async-trait = "0.1.80"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[package.metadata.cargo-machete]
ignored = ["uuid"]